--- a/project_teacher 2(1)/project_teacher 2/package.json
+++ b/project_teacher 2(1)/project_teacher 2/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
+    "npm": "^8.1.4",
     "ui": "^0.2.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
